dhs-antlr4/src/main/python/compiladorParser.py
# Generated from /home/martin/Escritorio/DHS/dhsCompilador/dhs-antlr4/src/main/python/compilador.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class compiladorParser ( Parser ):

    grammarFileName = "compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'if'", "'while'", "'for'", 
                     "';'", "','", "'{'", "'}'", "'('", "')'", "'='", "'<'", 
                     "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "<INVALID>", 
                     "'&&'", "'||'", "'!'", "'++'", "'--'", "'int'", "'double'", 
                     "'char'", "'bool'", "'void'" ]

    symbolicNames = [ "<INVALID>", "ENTERO", "IF", "WHILE", "FOR", "PYC", 
                      "COMA", "LA", "LC", "PA", "PC", "IGUAL", "MENOR", 
                      "MAYOR", "MAS", "MENOS", "MUL", "DIV", "MOD", "TOF", 
                      "AND", "ORR", "NOT", "INC", "RED", "INT", "DOUBLE", 
                      "CHAR", "BOOL", "VOID", "ID", "WS" ]

    RULE_programa = 0
    RULE_lineas = 1
    RULE_instruccion = 2
    RULE_bloque = 3
    RULE_estructuras = 4
    RULE_funciones = 5
    RULE_funcionesDecPro = 6
    RULE_funcionesDec = 7
    RULE_funcionesllam = 8
    RULE_tipo_dato = 9
    RULE_tipo_dato_func = 10
    RULE_unarios = 11
    RULE_asignable = 12
    RULE_decl_var = 13
    RULE_asig = 14
    RULE_lista_asignaciones = 15
    RULE_declaracion_variables = 16
    RULE_declaracion_variables_func = 17
    RULE_asignacion = 18
    RULE_la = 19
    RULE_operadores_relacionales = 20
    RULE_operadores_logicos = 21
    RULE_comparacion = 22
    RULE_expresion = 23
    RULE_termino = 24
    RULE_factor = 25
    RULE_iif = 26
    RULE_iwhile = 27
    RULE_ifor = 28

    ruleNames =  [ "programa", "lineas", "instruccion", "bloque", "estructuras", 
                   "funciones", "funcionesDecPro", "funcionesDec", "funcionesllam", 
                   "tipo_dato", "tipo_dato_func", "unarios", "asignable", 
                   "decl_var", "asig", "lista_asignaciones", "declaracion_variables", 
                   "declaracion_variables_func", "asignacion", "la", "operadores_relacionales", 
                   "operadores_logicos", "comparacion", "expresion", "termino", 
                   "factor", "iif", "iwhile", "ifor" ]

    EOF = Token.EOF
    ENTERO=1
    IF=2
    WHILE=3
    FOR=4
    PYC=5
    COMA=6
    LA=7
    LC=8
    PA=9
    PC=10
    IGUAL=11
    MENOR=12
    MAYOR=13
    MAS=14
    MENOS=15
    MUL=16
    DIV=17
    MOD=18
    TOF=19
    AND=20
    ORR=21
    NOT=22
    INC=23
    RED=24
    INT=25
    DOUBLE=26
    CHAR=27
    BOOL=28
    VOID=29
    ID=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineas(self):
            return self.getTypedRuleContext(compiladorParser.LineasContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.lineas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionContext,0)


        def lineas(self):
            return self.getTypedRuleContext(compiladorParser.LineasContext,0)


        def EOF(self):
            return self.getToken(compiladorParser.EOF, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_lineas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineas" ):
                listener.enterLineas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineas" ):
                listener.exitLineas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineas" ):
                return visitor.visitLineas(self)
            else:
                return visitor.visitChildren(self)




    def lineas(self):

        localctx = compiladorParser.LineasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lineas)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.instruccion()
                self.state = 61
                self.lineas()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(compiladorParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(compiladorParser.BloqueContext,0)


        def declaracion_variables(self):
            return self.getTypedRuleContext(compiladorParser.Declaracion_variablesContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compiladorParser.AsignacionContext,0)


        def PYC(self):
            return self.getToken(compiladorParser.PYC, 0)

        def estructuras(self):
            return self.getTypedRuleContext(compiladorParser.EstructurasContext,0)


        def funciones(self):
            return self.getTypedRuleContext(compiladorParser.FuncionesContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladorParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.declaracion_variables()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.asignacion()
                self.state = 70
                self.match(compiladorParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.estructuras()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.funciones()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.funciones()
                self.state = 75
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LA(self):
            return self.getToken(compiladorParser.LA, 0)

        def lineas(self):
            return self.getTypedRuleContext(compiladorParser.LineasContext,0)


        def LC(self):
            return self.getToken(compiladorParser.LC, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladorParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(compiladorParser.LA)
            self.state = 80
            self.lineas()
            self.state = 81
            self.match(compiladorParser.LC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructurasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iwhile(self):
            return self.getTypedRuleContext(compiladorParser.IwhileContext,0)


        def iif(self):
            return self.getTypedRuleContext(compiladorParser.IifContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compiladorParser.IforContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_estructuras

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuras" ):
                listener.enterEstructuras(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuras" ):
                listener.exitEstructuras(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstructuras" ):
                return visitor.visitEstructuras(self)
            else:
                return visitor.visitChildren(self)




    def estructuras(self):

        localctx = compiladorParser.EstructurasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_estructuras)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladorParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.iwhile()
                pass
            elif token in [compiladorParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.iif()
                pass
            elif token in [compiladorParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.ifor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcionesDec(self):
            return self.getTypedRuleContext(compiladorParser.FuncionesDecContext,0)


        def funcionesllam(self):
            return self.getTypedRuleContext(compiladorParser.FuncionesllamContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_funciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunciones" ):
                listener.enterFunciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunciones" ):
                listener.exitFunciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunciones" ):
                return visitor.visitFunciones(self)
            else:
                return visitor.visitChildren(self)




    def funciones(self):

        localctx = compiladorParser.FuncionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funciones)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladorParser.INT, compiladorParser.DOUBLE, compiladorParser.CHAR, compiladorParser.BOOL, compiladorParser.VOID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.funcionesDec()
                pass
            elif token in [compiladorParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.funcionesllam()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionesDecProContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_dato_func(self):
            return self.getTypedRuleContext(compiladorParser.Tipo_dato_funcContext,0)


        def ID(self):
            return self.getToken(compiladorParser.ID, 0)

        def PA(self):
            return self.getToken(compiladorParser.PA, 0)

        def PC(self):
            return self.getToken(compiladorParser.PC, 0)

        def PYC(self):
            return self.getToken(compiladorParser.PYC, 0)

        def declaracion_variables_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorParser.Declaracion_variables_funcContext)
            else:
                return self.getTypedRuleContext(compiladorParser.Declaracion_variables_funcContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.COMA)
            else:
                return self.getToken(compiladorParser.COMA, i)

        def getRuleIndex(self):
            return compiladorParser.RULE_funcionesDecPro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionesDecPro" ):
                listener.enterFuncionesDecPro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionesDecPro" ):
                listener.exitFuncionesDecPro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionesDecPro" ):
                return visitor.visitFuncionesDecPro(self)
            else:
                return visitor.visitChildren(self)




    def funcionesDecPro(self):

        localctx = compiladorParser.FuncionesDecProContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcionesDecPro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.tipo_dato_func()
            self.state = 93
            self.match(compiladorParser.ID)
            self.state = 94
            self.match(compiladorParser.PA)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorParser.INT) | (1 << compiladorParser.DOUBLE) | (1 << compiladorParser.CHAR) | (1 << compiladorParser.BOOL))) != 0):
                self.state = 95
                self.declaracion_variables_func()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==compiladorParser.COMA:
                self.state = 101
                self.match(compiladorParser.COMA)
                self.state = 102
                self.declaracion_variables_func()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(compiladorParser.PC)
            self.state = 109
            self.match(compiladorParser.PYC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionesDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_dato_func(self):
            return self.getTypedRuleContext(compiladorParser.Tipo_dato_funcContext,0)


        def ID(self):
            return self.getToken(compiladorParser.ID, 0)

        def PA(self):
            return self.getToken(compiladorParser.PA, 0)

        def PC(self):
            return self.getToken(compiladorParser.PC, 0)

        def declaracion_variables_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladorParser.Declaracion_variables_funcContext)
            else:
                return self.getTypedRuleContext(compiladorParser.Declaracion_variables_funcContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.COMA)
            else:
                return self.getToken(compiladorParser.COMA, i)

        def getRuleIndex(self):
            return compiladorParser.RULE_funcionesDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionesDec" ):
                listener.enterFuncionesDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionesDec" ):
                listener.exitFuncionesDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionesDec" ):
                return visitor.visitFuncionesDec(self)
            else:
                return visitor.visitChildren(self)




    def funcionesDec(self):

        localctx = compiladorParser.FuncionesDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcionesDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.tipo_dato_func()
            self.state = 112
            self.match(compiladorParser.ID)
            self.state = 113
            self.match(compiladorParser.PA)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorParser.INT) | (1 << compiladorParser.DOUBLE) | (1 << compiladorParser.CHAR) | (1 << compiladorParser.BOOL))) != 0):
                self.state = 114
                self.declaracion_variables_func()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==compiladorParser.COMA:
                self.state = 120
                self.match(compiladorParser.COMA)
                self.state = 121
                self.declaracion_variables_func()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(compiladorParser.PC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionesllamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.ID)
            else:
                return self.getToken(compiladorParser.ID, i)

        def PA(self):
            return self.getToken(compiladorParser.PA, 0)

        def PC(self):
            return self.getToken(compiladorParser.PC, 0)

        def ENTERO(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.ENTERO)
            else:
                return self.getToken(compiladorParser.ENTERO, i)

        def TOF(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.TOF)
            else:
                return self.getToken(compiladorParser.TOF, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladorParser.COMA)
            else:
                return self.getToken(compiladorParser.COMA, i)

        def getRuleIndex(self):
            return compiladorParser.RULE_funcionesllam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionesllam" ):
                listener.enterFuncionesllam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionesllam" ):
                listener.exitFuncionesllam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionesllam" ):
                return visitor.visitFuncionesllam(self)
            else:
                return visitor.visitChildren(self)




    def funcionesllam(self):

        localctx = compiladorParser.FuncionesllamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcionesllam)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(compiladorParser.ID)
                self.state = 130
                self.match(compiladorParser.PA)
                self.state = 131
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorParser.ENTERO) | (1 << compiladorParser.TOF) | (1 << compiladorParser.ID))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==compiladorParser.COMA:
                    self.state = 132
                    self.match(compiladorParser.COMA)
                    self.state = 133
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorParser.ENTERO) | (1 << compiladorParser.TOF) | (1 << compiladorParser.ID))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 139
                self.match(compiladorParser.PC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(compiladorParser.ID)
                self.state = 141
                self.match(compiladorParser.PA)
                self.state = 142
                self.match(compiladorParser.PC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_datoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(compiladorParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(compiladorParser.DOUBLE, 0)

        def CHAR(self):
            return self.getToken(compiladorParser.CHAR, 0)

        def BOOL(self):
            return self.getToken(compiladorParser.BOOL, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_tipo_dato

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_dato" ):
                listener.enterTipo_dato(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_dato" ):
                listener.exitTipo_dato(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_dato" ):
                return visitor.visitTipo_dato(self)
            else:
                return visitor.visitChildren(self)




    def tipo_dato(self):

        localctx = compiladorParser.Tipo_datoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_dato)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladorParser.INT) | (1 << compiladorParser.DOUBLE) | (1 << compiladorParser.CHAR) | (1 << compiladorParser.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_dato_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_dato(self):
            return self.getTypedRuleContext(compiladorParser.Tipo_datoContext,0)


        def VOID(self):
            return self.getToken(compiladorParser.VOID, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_tipo_dato_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_dato_func" ):
                listener.enterTipo_dato_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_dato_func" ):
                listener.exitTipo_dato_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_dato_func" ):
                return visitor.visitTipo_dato_func(self)
            else:
                return visitor.visitChildren(self)




    def tipo_dato_func(self):

        localctx = compiladorParser.Tipo_dato_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_dato_func)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladorParser.INT, compiladorParser.DOUBLE, compiladorParser.CHAR, compiladorParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.tipo_dato()
                pass
            elif token in [compiladorParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(compiladorParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnariosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INC(self):
            return self.getToken(compiladorParser.INC, 0)

        def RED(self):
            return self.getToken(compiladorParser.RED, 0)

        def MENOS(self):
            return self.getToken(compiladorParser.MENOS, 0)

        def IGUAL(self):
            return self.getToken(compiladorParser.IGUAL, 0)

        def ENTERO(self):
            return self.getToken(compiladorParser.ENTERO, 0)

        def MAS(self):
            return self.getToken(compiladorParser.MAS, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_unarios

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnarios" ):
                listener.enterUnarios(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnarios" ):
                listener.exitUnarios(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnarios" ):
                return visitor.visitUnarios(self)
            else:
                return visitor.visitChildren(self)




    def unarios(self):
